--- a/main_stylesheet.css
+++ b/main_stylesheet.css
@@ -226,7 +226,7 @@ body{
 }
 
 .slide:nth-of-type(1){
-    background-image: url("pics/homepage_pics/sunbake_web_slider-01.png");
+    background-image: url("pics/homepage_pics/60444-SUNBAKE-B2S-Website-Banner-02-scaled.jpg");
 }
 
 .slide:nth-of-type(2){
@@ -241,6 +241,7 @@ body{
     width : 100%;
     height : 100%;
     align-items: center;
+    pointer-events: none;
 }
 
 .controls{
@@ -1030,4 +1031,61 @@ body{
         font-size : 18px;
     }
 
+}
+
+@media only screen and (min-width : 1280px){
+
+    /**Navigation bar**/
+
+    body{
+        width : 90%;
+    }
+
+    .navbar{
+        height : 120px;
+    }
+
+    .navbar .mainMenu li:nth-of-type(9){
+        display : block;
+    }
+
+    .navbar a{
+        font-size : 18px;
+    }
+
+    /**Slide show area**/
+
+    .slideshow-container{
+        height : 350px;
+    }
+
+    .controls-container{
+        cursor: pointer;
+    }
+
+    .controls{
+        opacity: 0;
+        transition : all ease 1s;
+        pointer-events: all;
+    }
+
+    .controls:nth-of-type(1){
+        margin-left : -70px;
+    }
+
+    .controls:nth-of-type(2){
+        margin-right: -70px;
+    }
+
+    .slideshow-container:hover .controls{
+        opacity: 1;
+    }
+
+    .slideshow-container:hover #previous{
+        margin-left: 0px;
+    }
+
+    .slideshow-container:hover #next{
+        margin-right: 0px;
+    }
 }
